last minute bug fixes- refactored map show code, changec map z-index & fixed ascync issues on user show page

--- a/src/scss/partials/_map.scss
+++ b/src/scss/partials/_map.scss
@@ -10,6 +10,7 @@
 #userProfileMap{
   height: 400px;
   width: 100%;
+  z-index: 0;
 }
 
 .leaflet-tile-pane {
